@@ -29,12 +29,29 @@ ideaagent 下载 [https://github.com/mrshawnho/ideaagent](https://github.com/mrs
 3. 使用 vert.x 创建本地 http 认证服务器
 
 ## 使用方法
-1. 添加 VM option (IDEA Help > Edit Custom VM Options...)
-`-javaagent:ideaagent-1.0-jar-with-dependencies.jar`
-2. 重启 IDEA
+1. 解压到 ~/
+2. 添加 VM option 末尾 (IDEA Help > Edit Custom VM Options...)
+```
+# custom IntelliJ IDEA VM options
+
+-Xms128m
+-Xmx750m
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+
+-javaagent:~/ideaagent-1.0-jar-with-dependencies.jar
+```
+3. 重启 IDEA
 
 ## 测试环境
-1. JDK 1.8
-2. IDEA 2017 3.1
+1. Windows 10 && MacOS Sierra
+2. JDK 1.8
+3. IDEA 2017 3.1
 
 本文为个人学习笔记，切勿用于非法用途，转载请注明出处。
